    pointer type like Pointer#new.
  * Added the Pointer#value which is alias of Pointer#[0].
  * Fixed a bug where methods that take variable arguments does not call 
    appropriate function if raise an Argument Error exception.
  * Fixed a bug which fails looking up method when call super from block in 
    define_method.

= RubyMotion 1.25 =

  * Fixed a bug when using Objective-C properties implemented using message
    forwarding (ex. GKMatchRequest's maxPlayers).
  * Fixed a bug in build system where the app.info_plist dictionary would not
    be re-generated if app.info_plist is called before changing other settings
    (ex. app.name).
  * Fixed a bug in the build system where vendored Xcode projects (including
    projects via CocoaPods) would not be built honoring the Rakefile
    app.deployment_target variable.
  * Fixed a bug in the `rake device' debugger task where the debugger would
    fail to attach if the application name includes a space character.
  * Fixed a bug in the build system where a project whose path includes a space
    character would fail to build the second time.
  * Fixed a bug in the runtime where methods defined with `define_method' that
    are either aliased or created via a module inclusion would crash when
    called at runtime.
  * Fixed a bug in the build system where the `get-task-allow' entitlement
    which is set to true by default could not be set to false. Thanks to
    @andreas for the patch.
  * Fixed a bug in `rake simulator' where a stty-related warning would be
    printed in case the task is launched from a process where stdout is not a
    tty. Thanks to Dennis Ushakov for the patch.
  * Fixed a bug in Range's evaluation order, where the beginning part would not
    be evaluated at first (ex. (x = 0)..(x + 1)).
  * Improved the Regexp class to support octal literals and '\[hH]' matchers.
  * Fixed Math.atan2 to follow the Ruby 1.9.3 specs when both arguments are 0.0.

= RubyMotion 1.24 =
