@@ -14,6 +14,8 @@
     appropriate function if raise an Argument Error exception.
   * Fixed a bug which fails looking up method when call super from block in 
     define_method.
+  * Added `app.framework_search_paths' to configure your app in Rakefile.
+    This property is used to search the custom framework paths.
 
 = RubyMotion 1.25 =
 
